<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.kn65op.android.libs.ui.dialogs.DialogsFragment">

    <io.github.kn65op.android.lib.gui.searchablespinner.SearchableSpinner
        android:id="@+id/searchableSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/searchable_spinner_selected_value"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/searchableSpinner"
        app:layout_constraintTop_toBottomOf="@+id/searchableSpinner" />

    <Button
        android:id="@+id/searchable_selection_set_entry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintEnd_toStartOf="@+id/searchable_spinner_invalid_entry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchable_spinner_selected_value" />

    <Button
        android:id="@+id/searchable_spinner_invalid_entry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchable_selection_set_entry" />
</androidx.constraintlayout.widget.ConstraintLayout>